# spare-kits

./: .gitignore  README.md  pyproject.toml
src/sparekit/: __init__.py  cli.py  config.py  exceptions.py  models.py  sources.py  templates.py  utils.py
src/sparekit/templates/automation-script/: .gitignore.tpl  pyproject.toml.tpl  template.json
src/sparekit/templates/automation-script/src/_package/: cli.py.tpl  tasks.py.tpl
src/sparekit/templates/automation-script/tests/: test_tasks.py.tpl
src/sparekit/templates/cli-tool/: pyproject.toml.tpl  template.json
src/sparekit/templates/cli-tool/src/_package/: cli.py.tpl  core.py.tpl
src/sparekit/templates/cli-tool/tests/: test_core.py.tpl
src/sparekit/templates/data-science/: .gitignore.tpl  pyproject.toml.tpl  template.json
src/sparekit/templates/data-science/src/_package/: __init_.py.tpl  features.py.tpl
src/sparekit/templates/data-science/tests/: test_features.py.tpl
src/sparekit/templates/fastapi-api/: pyproject.toml.tpl  template.json
src/sparekit/templates/fastapi-api/tests/: test_app.py.tpl
src/sparekit/templates/flask-api/: pyproject.toml.tpl  template.json
src/sparekit/templates/flask-api/src/_package/: app.py.tpl  (+3 more)
src/sparekit/templates/flask-api/tests/: test_app.py.tpl
src/sparekit/templates/python-package/: pyproject.toml.tpl  readme.md.tpl  template.json
src/sparekit/templates/python-package/tests/: test_text.py.tpl
src/sparekit/templates/streamlit-app/: app.py.tpl  pyproject.toml.tpl  template.json
src/sparekit/templates/streamlit-app/tests/: test_data.py.tpl
src/sparekit/templates/telegram-bot/: pyproject.toml.tpl  template.json
src/sparekit/templates/telegram-bot/tests/: test_settings.py.tpl
tests/: test_sources.py  test_templates.py  test_utils.py
(+6 files in other folders)
