[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "sparekit"
version = "0.2.0"
description = "A Python CLI for creating production-ready starter project kits."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Nitish Vimal" }]
keywords = ["cli", "templates", "starter-kit", "project-generator", "python"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Code Generators",
]
dependencies = [
  "typer>=0.12.0",
  "rich>=13.0.0",
  "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
]

[project.scripts]
sparekit = "sparekit.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/sparekit"]
artifacts = ["src/sparekit/templates/**"]

[tool.hatch.build.targets.sdist]
include = [
  "src/sparekit",
  "tests",
  "README.md",
  "LICENSE",
  "pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py39"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.9"
strict = true
mypy_path = "src"
packages = ["sparekit"]

[tool.pytest.ini_options]
addopts = "-q --cov=sparekit --cov-report=term-missing"
testpaths = ["tests"]
